fix: Fixed code according to the checkstyle